--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  body {
+    background-color: #282c34;
+    text-align: center;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 300;
+   
+  
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .App{
+    
+    /*flex: 1;*/
+    display: flex;/*define que será flexivel, ocupando 100% de largura*/
+    
+    flex-wrap: wrap;/*itens serão quebrados em várias linhas*/
+    
+    min-width: 300px;/*largura min entre iten para alterar layout */
+  
   }
-  to {
-    transform: rotate(360deg);
+  
+  .TCard {
+    /*flex:1;*/
+    margin: 20px;
+    padding: 20px 5px;
+   
+    flex-direction: column;/**direção dos itens flexiveis/
+    overflow: hidden;/*se um ele ficar mutio grande deve: ocultar o resto*/
+   
   }
-}
+  
+  .Card {
+    flex:1;
+    margin: 20px;
+    border: 3px solid black;
+    border-radius: 10px;
+   
+    background-color: gray;
+    
+    
+    
+  }
+  
+  .RCard {
+    border-top: 100%;
+    padding: 5px ;
+    background-color: black;
+  }
